[package]
name = "bookgrep"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Basic grep equivalent, minor mods to Chapter 12."
repository = "https://github.com/TuxMC-sys/rust/tree/main/bookgrep"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
